[project]
name = "hello-chainlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Urooj Fatima", email = "uroojf199@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.5.5",
]

[project.scripts]
hello-chainlit = "hello_chainlit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
